# AgenticAI_ZeroToHero

./: AGENTIC_GLOSSARY.md  README.md
.devcontainer/: 00_START_HERE.md  DEVCONTAINER_SETUP.md  Dockerfile  QUICK_REFERENCE.md  README.md  devcontainer.json  post-create.sh  post-start.sh  setup.ipynb
Chapter_0/: COMPLETION_CHECKLIST.md  README.md  STRUCTURE_SUMMARY.md
Chapter_0/0.1_python_dev_setup/: python_dev_setup.ipynb
Chapter_0/0.2_package_dependency_management/: README.md  pip_vs_poetry_vs_uv.md  uv_quickstart.md
Chapter_0/0.2_package_dependency_management/examples/pip_project/: README.md  requirements-dev.txt  requirements.txt
Chapter_0/0.2_package_dependency_management/examples/poetry_project/: README.md  pyproject.toml
Chapter_0/0.2_package_dependency_management/examples/uv_project/: README.md  pyproject.toml
Chapter_0/0.3_fastapi_basics/: README.md  async_patterns.py  basic_app.py  with_pydantic_models.py
Chapter_0/0.4_testing_quality/: README.md  conftest.py  test_basics.py  test_fastapi.py  test_mocking.py  test_property_based.py
