[tool.poetry]
name = "poetry-example"
version = "0.1.0"
description = "Example Poetry project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.0"
pydantic = "^2.0.0"
fastapi = "^0.104.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.2.0"
black = "^23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
