[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uv-example"
version = "0.1.0"
description = "Example UV project"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.2.0",
]

[tool.uv]
python-version = "3.11"
